# ggme

./: LICENSE  README.md  pyproject.toml
data/test/: CommunityGraphs.pickle
data/train/: CommunityGraphs.pickle
src/: correlation.py  evaluate.py  main.py  perturb_graphs.py  perturbations.py  utils.py
src/metrics/: descriptor_functions.py  kernels.py  mmd.py  utils.py
