[tool.poetry]
name = "ggme"
version = "0.1.0"
description = "Repository for the systematic evaluation of graph generative models."
authors = []

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.22.2"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
tqdm = "^4.62.3"
pyemd = "^0.5.1"
sklearn = "^0.0"
scipy = "^1.8.0"
networkx = "^2.6.3"
python-igraph = "^0.9.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
